--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -37,6 +37,7 @@
 <!--        <dependency>-->
 <!--            <groupId>org.springframework.boot</groupId>-->
 <!--            <artifactId>spring-boot-starter-security</artifactId>`-->
-<!--        </dependency>-->
+<!--             </dependency>  not using the security-->
+
     </dependencies>
 </project>
